# xarray-rrepr

./: .gitignore  CONTRIBUTING.md  Justfile  LICENSE  README.md  README.qmd  data.json  myst.yml  pyproject.toml
.github/workflows/: test_coverage.yml  test_platforms.yml
ci/: deploy-docker-image.sh  deploy-trunk-docker-image.sh
docker/: Dockerfile  trunk.Dockerfile
docs/: api.md  index.ipynb
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_76ae272e8378f898___init___py.html  z_76ae272e8378f898_wrap_py.html
src/xarray_rrepr/: __init__.py  wrap.py
tests/: test_rrepr.py
