[project]
authors = [{ name = "Martin Schobben", email = "martin.schobben@tuwien.ac.at" }]
name = "xarray_rrepr"
version = "0.1.0"
description = "my project description"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xarray>=2025.6.1",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Natural Language :: English",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"


[dependency-groups]
# Unlike optional dependencies, development dependencies are local-only
# and will not be included in the project requirements when
# published to PyPI or other indexes
dev = [
 "pooch>=1.8.2",
 "pytest>=9.0.1",
 "pytest-cov>=7.0.0",
 "ruff>=0.14.5",
 "scipy>=1.15.3",
 "scipy-doctest>=2.0.1",
 "ty>=0.0.1a27",
]
docs = [
    "jupyterlab>=4.5.1",
    "jupyterlab-myst>=2.6.0",
    "myst-parser>=4.0.1",
    "mystmd>=1.7.1",
    "pyperclip>=1.11.0",
    "sphinx>=8.1.3",
]


# NOTE: Uncomment the next section to add pre-built wheel files of non-python
# libraries to your project. In this example GDAL has been choosen.
# Read more at:
# https://github.com/astral-sh/uv/issues/11466
#
# [[tool.uv.index]]
# name = "girder"
# url = "https://girder.github.io/large_image_wheels"
# explicit = true
#
# [tool.uv.sources]
# gdal = { index = "girder" }


[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma (may conflict with ruff formatter)
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests}/*" = ["E402", "ANN201", "D", "INP001", "S101", "PLR0915"]


[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
addopts = "--cov=xarray_rrepr --cov-report term-missing -rsx --verbose --color=yes"

[tool.coverage.run]
relative_files = true
